<resources>
    <string name="app_name">NavigationDrawerApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="blog">Blog</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_profile">Mi perfil</string>
    <string name="menu_settings">Ajustes</string>
    <string name="menu_log_out">Cerrar sesión</string>

    <string name="welcome">Bienvenido</string>
    <string name="login">Iniciar sesión</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="create_account">Crear cuenta</string>
    <string name="have_account_login">Ya tienes cuenta? Inicia sesión</string>
    <string name="create_account_btn">Cree su cuenta aquí</string>

    <string name="dialog_title">¿Seguro que desea cerrar la sesión?</string>
    <string name="dialog_accept">Aceptar</string>
    <string name="dialog_cancel">Cancelar</string>

    <string name="sv_text">Busca un título</string>
    <string name="next">Siguiente</string>

    <string name="title">Título</string>
    <string name="post_body">Cuerpo de la publicación</string>
    <string name="category">Categoría</string>
    <string name="published_by">Publicado por %s el %s</string>
    <string name="post_category">c/%s</string>

</resources>