<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/linear_login"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <LinearLayout
        android:id="@+id/linear_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:paddingHorizontal="10dp"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/et_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:paddingHorizontal="10dp"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="14dp"
            android:backgroundTint="#6CE3B8"
            android:text="@string/login" />

        <Button
            android:id="@+id/btn_navigate_to_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button"
            android:textColor="#4666B8"
            android:text="@string/create_account_btn"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textAllCaps="false"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>